[project]
name = "python-repo-template"
version = "0.0.1"
description = "A template for Python projects"
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Giovanni Giacometti", email = "giovanni.giacometti5@gmail.com" } ]
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.5",
]
